syntax = "proto3";

package hello;

message HelloRequest{
    int64 UserID = 1;
    int64 TokenID = 2;
}

message HelloResponse{
    bool Success = 1;
    string Message = 2;
}

service Hello{
    rpc HelloWorld (HelloRequest) returns (HelloResponse){}
}